<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FinishActivity"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/scoreActivity"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/score_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_name"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/content_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/your_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/your"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/best_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/your_label"
                    android:text="@string/best"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_label"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/your_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/best_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_toEndOf="@+id/your_text"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/restart_btn"
            android:layout_width="155dp"
            android:layout_height="65dp"
            android:layout_below="@id/score_panel"
            android:layout_centerHorizontal="true"
            android:text="@string/restart"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="155dp"
            android:layout_height="65dp"
            android:layout_below="@id/restart_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/share"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/home_btn"
            android:layout_width="155dp"
            android:layout_height="65dp"
            android:layout_below="@id/share_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>