<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/setting"
    tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/operators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/operators"
            android:padding="5dp"
            android:contentDescription="@string/operators"/>

        <TextView
            android:id="@+id/setting_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operators"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/sound_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting_head"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/music_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/music_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/music"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ToggleButton
                    android:id="@+id/music_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/music_label" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sfx_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/music_panel">

                <TextView
                    android:id="@+id/sfx_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:text="@string/sfx"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ToggleButton
                    android:id="@+id/sfx_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/sfx_label" />

            </RelativeLayout>

        </RelativeLayout>
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:layout_below="@id/sound_panel"
            android:layout_centerHorizontal="true"
            android:text="@string/reset"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:layout_below="@id/reset_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>